--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html{
     scroll-behavior: smooth;
 }
 header{
-    background: url(IMAGES/background3.png) fixed 100%;
+    background: url(background3.png) fixed 100%;
     height: 900px;
     background-size: cover;
     background-position: center;
