--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ html{
     scroll-behavior: smooth;
 }
 header{
-    background: url(background3.png) fixed 100%;
+    background: url(IMAGES/background3.png) fixed 100%;
     height: 900px;
     background-size: cover;
     background-position: center;
@@ -28,6 +28,34 @@ p{
     font-size: 60px;
     color: white;
 }
+.scroll-to-top {
+    position: fixed;
+    bottom: 30px;
+    right: 30px;
+    background-color: white; /* couleur de fond */
+    color: blueviolet; /* couleur du texte */
+    padding: 15px; /* espace intérieur */
+    border: none; /* pas de bordure */
+    border-radius: 10px; /* bordures arrondies */
+    cursor: pointer;
+    opacity: 0.7;
+    transition: opacity 0.3s ease;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1); /* ombre */
+}
+
+.scroll-to-top:hover {
+    background-color: blueviolet;
+    color: white;
+    transition: 0.5s;
+    opacity: 1;
+}
+
+.arrow {
+    font-size: 20px; /* taille de la flèche */
+    line-height: 1; /* hauteur de ligne pour centrer la flèche */
+}
+
+
 .image1{
     padding: 10%;
     margin-left: 24%;
@@ -45,49 +73,59 @@ footer > p{
     text-align: center;
 }
 nav {
-    background: linear-gradient(to right, rgb(34, 64, 186), rgb(239, 103, 192));
+    background-color: blueviolet; /* couleur de fond */
     padding: 20px;
 }
 
 ul {
-    list-style: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
     display: flex;
 }
 
 li {
-    margin: 0 20px;
+    margin-right: 20px;
 }
 
 a {
     text-decoration: none;
     color: white;
-    font-size: 20px;
     font-weight: bold;
     transition: color 0.3s;
-    justify-content: center;
 }
 
 a:hover {
-    color: rgb(165, 87, 238);
-}
-
-/* Styles pour le menu déroulant */
-.dropdown {
-    position: relative;
+    color: #ffffff80; /* changement de couleur au survol */
 }
 
 .dropdown-content {
     display: none;
     position: absolute;
-    top: 100%;
-    left: 0;
-    background-color: rgb(34, 64, 186);
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+    background-color: blueviolet; /* couleur de fond */
+    border-radius: 5px;
+    padding: 10px;
 }
 
 .dropdown:hover .dropdown-content {
     display: block;
 }
+
+/* Ajout de styles pour les sous-menus */
+.dropdown-content a {
+    display: block;
+    color: white;
+    padding: 5px 0;
+    border-bottom: 1px solid transparent; /* ajout d'une bordure transparente en bas */
+    transition: color 0.3s; /* transition de couleur */
+}
+
+.dropdown-content a:hover {
+    background-color: transparent; /* pas de couleur de fond au survol */
+    color: #ffffff80; /* changement de couleur au survol */
+}
+
+
 #cv>h2{
     text-align: center;
     font-size: 6vh;
@@ -97,6 +135,7 @@ a:hover {
     text-align: center;
     color: blueviolet;
     font-size: 6vh;
+    padding-bottom: 10px;
 }
 .info>p{
     color: blueviolet;
@@ -141,3 +180,32 @@ div.texte1{
 #projets{
     background-color: #f3f3f3;
 }
+.table {
+    width: 100%;
+    border-collapse: collapse;
+    border-radius: 10px;
+    overflow: hidden;
+}
+
+.table th, .table td {
+    padding: 12px 15px;
+    text-align: left;
+}
+
+.table th {
+    background-color: blueviolet;
+    color: white;
+}
+
+.table tbody tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+.table tbody tr:hover {
+    background-color: #ddd;
+}
+
+.table tbody tr:last-child {
+    border-bottom: none;
+}
+
