--- a/style.css
+++ b/style.css
@@ -1,28 +1,28 @@
 *{
     margin: 0;
-    font-family: 'Roboto', sans-serif;
+    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 html{
     scroll-behavior: smooth;
 }
-header{
-    background: url(IMAGES/background3.png) fixed 100%;
+header {
+    background: url(background3.png) fixed 100%;
     height: 900px;
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    background-position: 50% 50%;
     position: relative;
     text-align: center;
-    padding: 20px;
-    
+    color: white;
+    padding: 100px 20px;
 }
 header > h1{
     height: 30%;
     position: relative;
-    font-size: 90px;
+    font-size: 3em;
     top: 150px;
     color: white;
+    margin-bottom: 20px;
 }
 p{
     font-size: 60px;
@@ -144,7 +144,7 @@ a:hover {
 h3{
     font-size: 30px;
 }
-.education>p{
+.formation>p{
     color: blueviolet;
     font-size: 3vh;
 }
@@ -209,3 +209,12 @@ div.texte1{
     border-bottom: none;
 }
 
+.fixed-nav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    z-index: 1000;
+    background-color: blueviolet; 
+    opacity: 1;
+}
