--- a/style.css
+++ b/style.css
@@ -198,11 +198,11 @@ section.texte1 {
 }
 
 .table {
-    width: 100%;
+    width: 95%;
     border-collapse: collapse;
     border-radius: 10px;
     overflow: hidden;
-    margin: 20px;
+    margin: 0 auto;
 }
 
 .table th, .table td {
