--- a/style.css
+++ b/style.css
@@ -1,267 +1,181 @@
-* {
-    margin: 0;
-    font-family: 'San Francisco', -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-}
-
-html {
-    scroll-behavior: smooth;
-}
-
-header {
-    background: url(background3.png) fixed 100%;
-    height: 900px;
-    background-size: cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    position: relative;
-    text-align: center;
-    color: white;
-    padding: 100px 20px;
-}
-
-header > h1 {
-    height: 30%;
-    position: relative;
-    font-size: 3em;
-    top: 150px;
-    color: white;
-    margin-bottom: 20px;
-}
-
-p {
-    font-size: 60px;
-    color: white;
-}
-
-.scroll-to-top {
-    position: fixed;
-    bottom: 30px;
-    right: 30px;
-    background-color: white;
-    color: blueviolet;
-    padding: 15px;
-    border: none;
-    border-radius: 10px;
-    cursor: pointer;
-    opacity: 0.7;
-    transition: opacity 0.3s ease;
-    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-}
-
-.scroll-to-top:hover {
-    background-color: blueviolet;
-    color: white;
-    transition: 0.5s;
-    opacity: 1;
-}
-
-.arrow {
-    font-size: 20px;
-    line-height: 1;
-}
-
-.image1 {
-    padding: 10%;
-    margin-left: 24%;
-    border-radius: 25vh;
-}
-
-.texte1 > p {
-    color: blueviolet;
-    text-align: center;
-    font-size: 3vh;
-}
-
-footer > p {
-    color: black;
-    font-size: smaller;
-    text-align: center;
-}
-
-nav {
-    background-color: blueviolet;
-    padding: 20px;
-}
-
-ul {
-    list-style-type: none;
+/* Reset CSS */
+body, h1, h2, h3, p, ul, li, a, img, table, th, td, button {
     margin: 0;
     padding: 0;
-    display: flex;
-}
-
-li {
-    margin-right: 20px;
-}
-
-a {
-    text-decoration: none;
-    color: white;
-    font-weight: bold;
-    transition: color 0.3s;
-}
-
-a:hover {
-    color: #ffffff80;
-}
-
-.dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: blueviolet;
-    border-radius: 5px;
-    padding: 10px;
-}
-
-.dropdown:hover .dropdown-content {
-    display: block;
-}
-
-.dropdown-content a {
-    display: block;
-    color: white;
-    padding: 5px 0;
-    border-bottom: 1px solid transparent;
-    transition: color 0.3s;
-}
-
-.dropdown-content a:hover {
-    background-color: transparent;
-    color: #ffffff80;
-}
-
-#cv > h2 {
-    text-align: center;
-    font-size: 6vh;
-    color: blueviolet;
-}
-
-.texte1 > h1 {
-    text-align: center;
-    color: blueviolet;
-    font-size: 6vh;
-    padding-bottom: 10px;
-}
-
-.info > p {
-    color: blueviolet;
-    font-size: 3vh;
-}
-
-h3 {
-    font-size: 30px;
-}
-
-.formation > p {
-    color: blueviolet;
-    font-size: 3vh;
-}
-
-.experience > p {
-    color: blueviolet;
-    font-size: 3vh;
-}
-
-.skills > p {
-    color: blueviolet;
-    font-size: 3vh;
-}
-
-section.texte1 {
-    background-color: #f3f3f364;
-    padding-top: 40px;
-    padding-bottom: 40px;
-}
-
-#cv {
-    margin: 10vh;
-}
-
-#projets {
-    background-color: #f3f3f3;
-    padding: 50px 0;
-    text-align: center;
-    width: 100%;
     box-sizing: border-box;
 }
 
-#projets > h2 {
-    text-align: center;
-    font-size: 6vh;
-    color: blueviolet;
+/* Body */
+body {
+    font-family: Arial, sans-serif;
+    margin: 0;
+    padding: 0;
+    background-color: #1C1C1C;
+    color: #E0E1DD;
 }
 
-#veille > h2 {
-    text-align: center;
-    font-size: 6vh;
-    color: blueviolet;
-}
-
-.table {
-    width: 95%;
-    border-collapse: collapse;
-    border-radius: 10px;
-    overflow: hidden;
+/* Container */
+.container {
+    width: 80%;
     margin: 0 auto;
+    padding: 20px;
+}
+
+/* Header */
+header {
+    background-color: #0D1B2A;
+    color: white;
+    padding: 60px 0;
+    text-align: center;
+    border-radius: 15px;
+    margin-bottom: 20px;
+}
+
+/* Navigation */
+nav {
+    background-color: #1B263B;
+    padding: 10px 0;
+    border-radius: 15px;
+    margin-bottom: 20px;
+    position: fixed;
+    width: calc(100% - 40px); /* Largeur de la fenêtre moins les marges */
+    top: 0;
+    left: 50%; /* Centrer horizontalement */
+    transform: translateX(-50%); /* Ajuster pour centrer */
+    z-index: 1000;
+}
+
+nav ul {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    margin: 0;
+}
+
+nav ul li {
+    margin: 0 20px;
+    position: relative;
+}
+
+nav ul li a {
+    color: white;
+    text-decoration: none;
+    padding: 15px;
+    display: block;
+    border-radius: 10px;
+}
+
+nav ul li a:hover {
+    background-color: #415A77;
+}
+
+nav ul .dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #1B263B;
+    min-width: 160px;
+    top: 40px;
+    left: 0;
+    z-index: 1;
+    border-radius: 10px;
+}
+
+nav ul .dropdown-content li {
+    display: block;
+    margin: 0;
+}
+
+nav ul .dropdown:hover .dropdown-content {
+    display: block;
+}
+
+/* Scroll to Top Button */
+button.scroll-to-top {
+    display: none;
+    position: fixed;
+    bottom: 20px;
+    right: 30px;
+    z-index: 99;
+    font-size: 18px;
+    border: none;
+    outline: none;
+    background-color: #415A77;
+    color: white;
+    cursor: pointer;
+    padding: 15px;
+    border-radius: 50%;
+}
+
+button.scroll-to-top:hover {
+    background-color: #1B263B;
+}
+
+/* Sections */
+.section {
+    padding: 60px 20px;
+    border-top: 1px solid #2D2D2D;
+    border-bottom: 1px solid #2D2D2D;
+    border-radius: 15px;
+    margin-bottom: 20px;
+}
+
+.section-light {
+    background-color: #0D1B2A;
+}
+
+.section-dark {
+    background-color: #1B263B;
+}
+
+/* CV Section */
+.cv-section {
+    border: 1px solid #415A77;
+    margin: 20px 0;
+    padding: 20px;
+    background-color: #2E3A4E;
+    border-radius: 15px;
+}
+
+/* Table */
+.table {
+    width: 100%;
+    border-collapse: collapse;
+    margin: 20px 0;
+    border-radius: 15px;
+    overflow: hidden;
 }
 
 .table th, .table td {
-    padding: 12px 15px;
+    border: 1px solid #415A77;
+    padding: 10px;
     text-align: left;
 }
 
 .table th {
-    background-color: blueviolet;
+    background-color: #1B263B;
     color: white;
 }
 
-.table tbody tr:nth-child(even) {
-    background-color: #f2f2f2;
+.table td {
+    background-color: #0D1B2A;
+    color: #E0E1DD;
+    vertical-align: top;
 }
 
-.table tbody tr:hover {
-    background-color: #ddd;
+/* Description cell */
+.table td.description {
+    max-height: 100px;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 
-.table tbody tr:last-child {
-    border-bottom: none;
-}
-
-.fixed-nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    z-index: 1000;
-    background-color: blueviolet;
-}
-
-#contact {
-    background-color: #f3f3f3;
-    padding: 50px 0;
+/* Footer */
+footer {
+    background-color: #1B263B;
+    color: white;
     text-align: center;
-}
-
-#contact h2 {
-    color: blueviolet;
-    font-size: 6vh;
-}
-
-.contact-info {
-    margin-top: 20px;
-}
-
-.contact-info h3 {
-    color: blueviolet;
-    font-size: 4vh;
-}
-
-.contact-info p {
-    color: blueviolet;
-    font-size: 2.5vh;
-    margin-bottom: 10px;
-}
-
-.section-with-nav-offset {
-    padding-top: 80px;
+    padding: 20px 0;
+    border-radius: 15px;
 }
