--- a/style.css
+++ b/style.css
@@ -1,5 +1,16 @@
 /* Reset CSS */
-body, h1, h2, h3, p, ul, li, a, img, table, th, td, button {
+body,
+h1,
+h2,
+h3,
+p,
+ul,
+li,
+a,
+table,
+th,
+td,
+button {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -10,9 +21,79 @@ body {
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 0;
-    background-color: #1C1C1C;
-    color: #E0E1DD;
+    background-color: #ffffff;
+    /* Fond blanc */
+    color: #333;
 }
+
+#Accueil {
+    display: flex;
+    height: 85vh;
+}
+
+#Accueil h1 {
+    padding: 20px;
+}
+
+#animated-text {
+    font-size: 40px;
+    font-weight: bold;
+}
+
+@keyframes bounce {
+
+    0%,
+    20%,
+    50%,
+    80%,
+    100% {
+        transform: translateY(0);
+    }
+
+    40% {
+        transform: translateY(-20px);
+    }
+
+    60% {
+        transform: translateY(-10px);
+    }
+}
+
+#logo {
+    animation: bounce 2s infinite;
+    width: 300px;
+    height: auto;
+}
+
+/* Style CSS pour la flèche animée */
+
+.arrow-container {
+    text-align: center; /* Centrer le contenu horizontalement */
+    position: relative; /* Position relative pour permettre le positionnement absolu de la flèche */
+  }
+  
+  .arrow-down {
+    width: 0;
+    height: 0;
+    border-left: 10px solid transparent; /* Taille et forme de la flèche */
+    border-right: 10px solid transparent;
+    border-top: 15px solid #0a4c92; /* Couleur de fond de la flèche */
+    position: absolute; /* Position absolue par rapport à son conteneur */
+    bottom: -20px; /* Distance depuis le bas de l'image */
+    left: 50%; /* Position au centre horizontalement */
+    transform: translateX(-50%); /* Centrer la flèche horizontalement */
+    animation: bounce 2s infinite; /* Animation de rebond */
+  }
+  
+  @keyframes bounce {
+    0%, 20%, 50%, 80%, 100% {
+      transform: translateY(0); /* Position de départ et d'arrivée */
+    }
+    40% {
+      transform: translateY(10px); /* Hauteur maximale du rebond */
+    }
+  }
+  
 
 /* Container */
 .container {
@@ -21,119 +102,125 @@ body {
     padding: 20px;
 }
 
+.container1 {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    width: 80%;
+    margin: 0 auto;
+    padding: 20px;
+    font-size: larger;
+}
+
+.container1 img {
+    width: 50%;
+    height: auto;
+    border-radius: 15px;
+}
+
 /* Header */
 header {
-    background-color: #0D1B2A;
-    color: white;
+    background-color: #0a4c92;
+    /* Bleu OM */
+    color: #ffffff;
+    /* Blanc */
     padding: 60px 0;
     text-align: center;
     border-radius: 15px;
     margin-bottom: 20px;
 }
 
-/* Navigation */
-nav {
-    background-color: #1B263B;
+/* Barre de navigation */
+#mainNav {
+    background-color: #0a4c92;
+    /* Couleur de fond de la barre de navigation */
     padding: 10px 0;
-    border-radius: 15px;
-    margin-bottom: 20px;
+    margin: 0;
+    width: 100%;
     position: fixed;
-    width: calc(100% - 40px); /* Largeur de la fenêtre moins les marges */
     top: 0;
-    left: 50%; /* Centrer horizontalement */
-    transform: translateX(-50%); /* Ajuster pour centrer */
     z-index: 1000;
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
+    /* Assurer que la barre de navigation est au-dessus de tout autre contenu */
     display: flex;
+    justify-content: space-between;
+    /* Centrage horizontal avec espace entre les éléments */
+    align-items: center;
+    /* Centrage vertical des éléments */
+}
+
+#bonne-mere-logo {
+    width: 60px;
+    /* Ajustez la taille de l'image selon vos besoins */
+    margin-left: 20px;
+    /* Marge à gauche pour séparer l'image du bord de la page */
+}
+
+#mainNav ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    /* Utilisation de flexbox pour aligner les éléments de la liste */
     justify-content: center;
-    margin: 0;
+    /* Centrage horizontal des éléments de la liste */
 }
 
-nav ul li {
-    margin: 0 20px;
-    position: relative;
+#mainNav ul li {
+    display: inline;
+    margin: 0 10px;
+    /* Marge autour de chaque élément de la liste */
 }
 
-nav ul li a {
-    color: white;
+#mainNav ul li a {
+    display: inline-block;
+    padding: 10px 20px;
+    color: #ffffff;
+    /* Texte blanc */
     text-decoration: none;
-    padding: 15px;
-    display: block;
-    border-radius: 10px;
-}
-
-nav ul li a:hover {
-    background-color: #415A77;
-}
-
-nav ul .dropdown-content {
-    display: none;
-    position: absolute;
-    background-color: #1B263B;
-    min-width: 160px;
-    top: 40px;
-    left: 0;
-    z-index: 1;
-    border-radius: 10px;
-}
-
-nav ul .dropdown-content li {
-    display: block;
-    margin: 0;
-}
-
-nav ul .dropdown:hover .dropdown-content {
-    display: block;
-}
-
-/* Scroll to Top Button */
-button.scroll-to-top {
-    display: none;
-    position: fixed;
-    bottom: 20px;
-    right: 30px;
-    z-index: 99;
     font-size: 18px;
-    border: none;
-    outline: none;
-    background-color: #415A77;
-    color: white;
-    cursor: pointer;
-    padding: 15px;
-    border-radius: 50%;
 }
 
-button.scroll-to-top:hover {
-    background-color: #1B263B;
+#mainNav ul li a:hover {
+    background-color: #1565c0;
+    /* Bleu OM plus foncé au survol */
+    border-radius: 10px;
+    /* Plus de bordure arrondie au survol */
+    transition: 0.3s;
 }
 
 /* Sections */
 .section {
     padding: 60px 20px;
-    border-top: 1px solid #2D2D2D;
-    border-bottom: 1px solid #2D2D2D;
+    border: 2px solid #000000;
+    /* Bordure noire */
     border-radius: 15px;
-    margin-bottom: 20px;
+    margin: 20px 10%;
+    position: relative;
+    /* Ajout de position relative pour le contenu */
 }
 
 .section-light {
-    background-color: #0D1B2A;
+    background-color: #ffffff;
+    /* Fond blanc */
+    color: #333;
 }
 
 .section-dark {
-    background-color: #1B263B;
+    background-color: #0a4c92;
+    /* Bleu OM */
+    color: #ffffff;
+    /* Blanc */
 }
 
 /* CV Section */
 .cv-section {
-    border: 1px solid #415A77;
+    border: 1px solid #0a4c92;
+    /* Bleu OM */
     margin: 20px 0;
     padding: 20px;
-    background-color: #2E3A4E;
+    background-color: #ffffff;
+    /* Fond blanc */
     border-radius: 15px;
 }
 
@@ -146,20 +233,25 @@ button.scroll-to-top:hover {
     overflow: hidden;
 }
 
-.table th, .table td {
-    border: 1px solid #415A77;
+.table th,
+.table td {
+    border: 1px solid #0a4c92;
+    /* Bleu OM */
     padding: 10px;
     text-align: left;
 }
 
 .table th {
-    background-color: #1B263B;
-    color: white;
+    background-color: #1565c0;
+    /* Bleu OM plus foncé */
+    color: #ffffff;
+    /* Blanc */
 }
 
 .table td {
-    background-color: #0D1B2A;
-    color: #E0E1DD;
+    background-color: #ffffff;
+    /* Fond blanc */
+    color: #333;
     vertical-align: top;
 }
 
@@ -173,8 +265,10 @@ button.scroll-to-top:hover {
 
 /* Description links */
 .description a {
-    color: #1a73e8;
+    color: #0a4c92;
+    /* Bleu OM */
     text-decoration: none;
+    font-style: italic;
 }
 
 .description a:hover {
@@ -183,9 +277,11 @@ button.scroll-to-top:hover {
 
 /* Footer */
 footer {
-    background-color: #1B263B;
+    background-color: #0a4c92;
+    /* Bleu OM */
     color: white;
     text-align: center;
     padding: 20px 0;
     border-radius: 15px;
+    margin: 20px 10%;
 }
